--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "emailjs-com": "^3.2.0",
     "express": "^4.21.2",
     "framer-motion": "^12.4.7",
+    "lucide-react": "^0.477.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
